Fix consecutive header spacing

--- a/docs/_sass/minima/_layout.scss
+++ b/docs/_sass/minima/_layout.scss
@@ -228,6 +228,10 @@
     }
   }
 
+  h2 + h3, h3 + h4, h4 + h5, h5 + h6 {
+    margin-top: $spacing-unit * 0.5 !important;
+  }
+
   h2 {
     @include relative-font-size(1.75);
 
